Изменил спеку(убрали круд для orderStatus) -> Оставили только 2 эндпоинта.
